# protoc-gen-state

./: '  .babelrc.js  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  action.go  aggregator.go  annotations.go  bazel-bin  bazel-genfiles  bazel-out  bazel-protoc-gen-state  bazel-testlogs  epic.go  generator.go  go.mod  go.sum  main.go  main_test.go  outputs.txt  package.json  protoc-gen-state  protoc_gen_state_suite_test.go  reducer.go  state.go  toMessage.go  tsconfig.gen-state.test.json  tsconfig.json  tsconfig.test.json  utils.go  webpack.config.js  webpack.gen-state.js
.circleci/: config.yml
e2e/: README.md  package.json  tsconfig.gen-state.json  tsconfig.gen-state.test.json  webpack.gen-state.js
e2e/OldGenerated/: actions_pb.ts  epics_pb.ts  protoc_services_pb.ts  protoc_types_pb.ts  readinglist_aggregate.ts  reducer_pb.ts  state_pb.ts  to_message_pb.ts
e2e/mobx/: README.md  package.json
e2e/mobx/protos/: BUILD.bazel  basic.proto
e2e/protos/: basic.proto
e2e/protos/BasicState/: actions_pb.ts  epics_pb.ts  protoc_services_pb.ts  protoc_types_pb.ts  readinglist_aggregate.ts  state_pb.ts  to_message_pb.ts
e2e/protos/readinglist/: readinglist_pb.d.ts
e2e/redux3/: README.md  package.json  tsconfig.json  webpack.polyfills.js
e2e/redux3/protos/: BUILD.bazel  basic.proto
e2e/redux3/spec/: run.js
e2e/redux3/src/: App.tsx  component.tsx  rootAction.ts  rootEpic.ts  rootState.ts
e2e/redux3/test/: action.test.ts  reducer.test.ts
e2e/redux4/: README.md  package.json  tsconfig.json  webpack.config.js
e2e/redux4/protos/: BUILD.bazel  basic.proto
e2e/redux4/protos/BasicState/: actions_pb.ts  epics_pb.ts  protoc_services_pb.ts  reducer_pb.ts  state_pb.ts  to_message_pb.ts
e2e/redux4/protos/readinglist/: BUILD.bazel  readinglist.proto  readinglist_pb.d.ts  readinglist_pb.js  readinglist_pb_service.d.ts  readinglist_pb_service.js
e2e/redux4/src/: App.tsx  action.test.ts  index.tsx  rootAction.ts  rootEpic.ts  rootReducer.ts  rootState.ts  store.ts
e2e/redux4/test/: action.test.ts  epics.test.ts
e2e/spec/helpers/: alias.js  jsdom.js
e2e/src/: action.test.ts  reducer.test.ts  rootAction.ts  rootEpic.ts  rootReducer.ts  rootState.ts  store.ts
e2e/src/book/: component.tsx
e2e/src/promiseTest/: component.tsx
e2e/src/public/: index.html
examples/test/: basic.proto  readinglist.proto  readinglist2.proto
generator/: BUILD.bazel  action.go  aggregator.go  annotations.go  epic.go  generator.go  improvedProto.go  outputInterface.go  reducer.go  state.go  toMessage.go  utils.go
generator/epic/: epic.go
generator/outputs/mobx/: BUILD.bazel  state.go
generator/outputs/redux3/: BUILD.bazel  action.go  aggregator.go  epic.go  reducer.go  state.go  toMessage.go
generator/outputs/redux4/: BUILD.bazel  action.go  aggregator.go  epic.go  reducer.go  state.go  toMessage.go
generator/state/: redux3.go  redux4.go  state.go
generator/toMessage/: toMessage.go
scripts/: clean-project.sh  generate-protoc-for-all-outputs.sh  test-all-outputs.sh
spec/helpers/: alias.js  babel.js
spec/support/: jasmine.json
state/: BUILD.bazel  options.pb.go  options.proto
(+57 files in other folders)
