load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tcncloud/protoc-gen-persist
# gazelle:exclude vendor
# gazelle:exclude bazel/protoc-gen-state
# gazelle:exclude node_modules
# gazelle:exclude examples
# gazelle:exclude tests
gazelle(
    name = "gazelle",
)
