load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "action.go",
        "aggregator.go",
        "annotations.go",
        "epic.go",
        "generator.go",
        "improvedProto.go",
        "outputInterface.go",
        "reducer.go",
        "state.go",
        "toMessage.go",
        "utils.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-state/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//generator/outputs/redux3:go_default_library",
        "//generator/outputs/redux4:go_default_library",
        "//state:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
