load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "action.go",
        "aggregator.go",
        "epic.go",
        "reducer.go",
        "state.go",
        "toMessage.go",
    ],
    importpath = "github.com/tcncloud/protoc-gen-state/generator/outputs/redux4",
    visibility = ["//visibility:public"],
)
